<resources>
    <string name="app_name">Laboratorio No. 2</string>
    <string name="Messi">Messi</string>
    <string name="Ronaldo">Ronaldo</string>
    <string name="Futbolistas">Futbolistas</string>
    <string name="DescripcionMessi"><b>Lionel Andrés Messi Cuccittini</b> (Rosario, 24 de junio de 1987), conocido como Leo Messi, es un futbolista argentino que juega como delantero o centrocampista. Jugador histórico del Fútbol Club Barcelona, al que estuvo ligado veinte años, desde 2021 integra el plantel del Paris Saint-Germain de la Ligue 1 de Francia. Es también internacional con la selección de Argentina, equipo del que es capitán.
\n\nConsiderado con frecuencia el mejor jugador del mundo y uno de los mejores de todos los tiempos,9​ es el único futbolista en la historia que ha ganado, entre otras distinciones, siete veces el Balón de Oro, seis premios de la FIFA al mejor jugador del mundo, seis Botas de Oro y dos Balones de Oro de la Copa Mundial de Fútbol. En 2020, se convirtió en el primer futbolista y el primer argentino en recibir un premio Laureus y fue incluido en el Dream Team del Balón de Oro.
\n\nCon el Barcelona ha ganado 35 títulos, entre ellos, diez de La Liga, cuatro de la Liga de Campeones de la UEFA y siete de la Copa del Rey.
\n\nGoleador prolífico, ostenta, entre otros, los récords por más goles en una temporada,10​ en un mismo club y en un año calendario. Es, además, el máximo goleador histórico del Barcelona y de la selección argentina, de La Liga, la Supercopa de España, la Supercopa de Europa y el jugador no europeo con más goles en la Liga de Campeones de la UEFA.
\n\nNacido y criado en la ciudad de Rosario, a los 13 años se radicó en España, donde el Barcelona accedió a pagar el tratamiento de la enfermedad hormonal que le habían diagnosticado de niño. Después de una rápida progresión por la Academia juvenil del Barcelona, hizo su debut oficial con el primer equipo en octubre de 2004, a los diecisiete años. A pesar de ser propenso a lesiones en los inicios de su carrera, ya en 2006 se estableció como jugador fundamental para el club. Su primera campaña ininterrumpida fue la temporada 2008-09, en la que el Barcelona alcanzó el primer triplete del fútbol español. Por su estilo de juego de pequeño driblador zurdo,11​ pronto se lo comparó con su compatriota Diego Maradona quien, en 2007, lo declaró su «sucesor».
\n\nEn 2009, a los veintidós años, ganó su primer Balón de Oro y el premio al Jugador Mundial de la FIFA del año. Siguieron tres temporadas exitosas, en las que ganó cuatro Balones de Oro de forma consecutiva, hecho que no tenía precedentes. Hasta el momento, su mejor campaña personal es la temporada 2011-12, en la que estableció el récord de más goles en una temporada, tanto en La Liga como en otras competiciones europeas. Durante las dos siguientes temporadas, también sufrió lesiones y, en 2014, perdió el Balón de Oro frente a Cristiano Ronaldo, a quien se considera su rival. Recuperó su mejor forma durante la campaña 2014-15, en la que superó los registros de máximo goleador absoluto en La Liga y la Liga de Campeones y logró con el Barcelona un histórico segundo triplete, además de ganar su quinto Balón de Oro. Volvería a ganarlo por sexta y séptima vez en 2019 y 2021.
\n\nComo internacional argentino, ha representado a su país en once torneos mayores. A nivel juvenil, en 2005 participó con la selección sub-20 en el Sudamericano de Colombia y ganó la Copa Mundial de Países Bajos, torneo en el que finalizó como mejor jugador y máximo goleador y, con la sub-23, recibió la medalla de oro en los Juegos Olímpicos de 2008. Después de debutar en la selección mayor en agosto de 2005, en el Mundial de Alemania 2006 se convirtió en el argentino más joven en jugar y en marcar en un mundial. Al año siguiente, en la Copa América, fue nombrado mejor jugador joven del torneo. Como capitán desde agosto de 2011, llegó con su equipo a las finales del Mundial de Brasil 2014, de la Copa América 2015 y de la Copa América Centenario, además de ganar la Copa América 2021 ante Brasil en el Maracaná y, en 2022, la Finalissima frente a Italia en Wembley y el Mundial de Catar contra Francia en el estadio Lusail.
\n\nCon el Barcelona ha ganado 35 títulos, entre ellos, diez de La Liga, cuatro de la Liga de Campeones de la UEFA y siete de la Copa del Rey.
    </string>
    <string name="DescripcionRonaldo"><b>Cristiano Ronaldo dos Santos Aveiro</b> (Funchal, Madeira, 5 de febrero de 1985), conocido como Cristiano Ronaldo, es un futbolista portugués. Juega como extremo izquierdo o delantero y su equipo actual es el Al-Nassr F. C. de la Liga Profesional Saudí.18​Es internacional absoluto con la selección de Portugal, de la cual es capitán y máximo goleador histórico.
\n\nConsiderado con frecuencia el mejor y más completo futbolista,19​así como el mayor goleador del mundo,20​además de uno de los mejores de todos los tiempos;n 3​21​ es uno de los futbolistas más laureados de la historia, habiendo ganado, entre otras distinciones, cinco veces el Balón de Oro, cinco premios de la FIFA al mejor jugador del mundo y cuatro Botas de Oro. En 2020, tuvo el honor de ser elegido el mejor Jugador del Siglo xxi en la gala de los Globe Soccer Awards,22​23​ convirtiéndose en el primer futbolista europeo y el primer portugués en recibirlo, además de ser incluido en el Dream Team del Balón de Oro.24​
\n\nIdentificado habitualmente en los medios de comunicación con el numerónimo CR7,n 4​25​ es, con 824 goles, el máximo goleador en la historia del fútbol profesional,26​27​ y con 450,28​ el máximo goleador histórico del Real Madrid Club de Fútbol,n 5​29​ consiguiéndolo en las nueve temporadas que jugó en este club. Es además, según los portales expertos en estadísticas históricas de la RSSSF y la IFFHS, el tercer máximo goleador en los campeonatos de Primera División de Europa, con 498 goles —cinco goles más a nivel mundial para un total de 503 goles—,30​ siendo estos datos reconocidos por la UEFA y la FIFA.n 6​31​32​
\n\nA lo largo de su carrera profesional, ha conseguido batir diversos récords. Entre ellos, se destacan ser el primer jugador que consiguió ganar cuatro Botas de Oro, el primer jugador en ganar el Premio Puskás, ser el segundo futbolista más laureado del Balón de Oro (con cinco), ser el primero en ganar el premio The Best FIFA —y el que más lo ha logrado con dos junto a Robert Lewandowski—, ser el jugador que más veces ha ganado el Premio UEFA al Mejor Jugador en Europa, con tres títulos,33​ ser el máximo goleador histórico de la selección portuguesa (118), el máximo goleador mundial a nivel de selecciones34​ (en 2021, ingresando en el Guinness World Records),35​ y ser el máximo goleador histórico de la Liga de Campeones (141) contando la fase previa,36​ el jugador con más partidos (187), más asistencias (42),37​ competición en la que también posee las marcas de más goles en una edición del torneo —17 goles en 11 partidos (2013-14)—, de más goles en una fase de grupos del torneo —11 goles en seis partidos (2015-16)— y de más veces máximo goleador del torneo con siete ediciones. Es, además, el madridista que menos partidos necesitó (92) para alcanzar los cien goles en el campeonato nacional de Liga y el jugador que menos partidos necesitó (140) para llegar a 150 goles en la historia de la Liga,38​39​ el primer futbolista en la historia de la competición que consiguió marcarle a todos los equipos a los que se enfrentó en una temporada,40​ el único futbolista capaz de marcar en seis Clásicos consecutivos,41​ o el único en anotar en seis visitas consecutivas al Camp Nou, estadio de máxima rivalidad para los blancos.42​
\n\nRonaldo comenzó su carrera en el Sporting Club de Portugal, equipo en el que obtuvo la Supercopa de Portugal antes de firmar con el Manchester United en 2003 a los 18 años, donde se consagró como futbolista de élite tras conquistar tres Premier League, dos EFL Cup, una FA Cup, dos Community Shield, una Liga de Campeones y una Copa Mundial de Clubes, fue galardonado con el Balón de Oro,43​ el Jugador Mundial de la FIFA44​ y la Bota de Oro,45​ trofeos que le acreditaban como mejor futbolista del mundo a fecha de 2008.
\n\nTras protagonizar el traspaso más caro en la historia del fútbol en su momento,46​ recaló en el Real Madrid Club de Fútbol, donde mejoró como futbolista llegando a sus más altos registros en juego y goles. En el club español fue el primer jugador en superar la histórica cifra de treinta y ocho goles en una temporada de Liga, situando la nueva marca en cuarenta goles,47​ registro que le sirvió para ganar su segunda Bota de Oro en el 2011.48​ Conquistó como madridista dos Copas del Rey,49​ dos Ligas,n 7​50​ y dos Supercopas de España, completando así la triple corona española, más cuatro Ligas de Campeones, tres Supercopas de Europa y tres Copas Mundiales de Clubes. Sus actuaciones le llevaron a conquistar otros cuatro Balones de Oro —en 2013, 2014, 2016 y 2017—51​52​ y otras dos Botas de oro —en 2014 y 2015— y a situarse entre los tres mejores jugadores del mundo durante ocho temporadas.53​ En 2018 fichó por la Juventus en un traspaso por valor inicial de 100 millones de euros (88 millones de libras esterlinas), el traspaso más caro para un club italiano y el más caro para un jugador mayor de 30 años. En el club turinés ganó dos títulos de la Serie A, dos Supercopas Italianas y una Copa Italia, obteniendo la triple corona italiana, antes de regresar al Manchester United en 2021.
\n\nInternacional absoluto con la selección portuguesa desde 2003,54​ ha disputado cinco Eurocopas, cinco Mundiales, una Copa Confederaciones y dos Ligas de Naciones, en donde sus máximos logros fueron la obtención de los títulos en la Eurocopa de 2016 y en la Liga de Naciones 2018-19.55​ En cuanto a la Copa Mundial y a la Copa Confederaciones, un cuarto lugar en Alemania 2006 y un tercer lugar en Rusia 2017 respectivamente, fueron sus mejores actuaciones. Es uno de los jugadores miembro del FIFA Century Club, formado por aquellos futbolistas con más de cien internacionalidades con su selección. Sus 196 partidos le colocan primero en el listado a fecha de 2023 —el que más ha disputado de la historia de Portugal— y, lógicamente, también primero a nivel UEFA. En 2015, Ronaldo fue nombrado el mejor jugador portugués de todos los tiempos por la Federación Portuguesa de Fútbol.
\n\nEs uno de los atletas más famosos y comercializables del mundo, así como también una de las figuras más mediáticas de su generación.56​ Fue clasificado como el atleta mejor pagado del mundo por Forbes en 2016 y 2017, y como el atleta más famoso del mundo por ESPN de 2016 a 2019. Time lo incluyó en su lista de las 100 personas más influyentes en el mundo en 2014. En el 2020, obtuvo ingresos por 105 millones de dólares, convirtiéndolo en el primer billonario del fútbol.57​ Para el año siguiente, sus ganancias fueron de 120 millones de dólares.58​
\n\nDesde 2014, es Gran Oficial de la Orden del Infante Don Enrique, uno de los máximos reconocimientos otorgados en Portugal, por su prestación de servicios relevantes otorgados a su país, así como su expansión cultural, histórica y de valores.
    </string>

    <string name="Anterior">Anterior</string>
    <string name="Siguente">Siguiente</string>

</resources>